--- a/index.html
+++ b/index.html
@@ -14,27 +14,7 @@
 
 <body class="body">
 
-  <!-- <div class="scrollblock">
-    <div class="container">
-      <div class="grid-item main">
-        <div class="items">
-          <div class="item item1"></div>
-          <div class="item item2"></div>
-          <div class="item item3"></div>
-          <div class="item item4"></div>
-          <div class="item item5"></div>
-          <div class="item item6"></div>
-          <div class="item item7"></div>
-          <div class="item item8"></div>
-          <div class="item item9"></div>
-          <div class="item item10"></div>
-          <div class="item item11"></div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <header class="header none">
+  <header class="header">
     <img src="./images/logo/logo.svg" alt="sup.ge logo" class="logo header__logo">
     <div class="header__controls">
       <div class="header__nav navigation">
@@ -62,16 +42,12 @@
 
     </div>
   </div>
-  <div class="about">
+
+  <div class="about block__pd-top">
     <div class="container container-grid">
       <div class="grid-title">
-        <h2 class="title-block title-block__padding-top about__title">О нас</h2>
+        <h2 class="title title__inner">О нас</h2>
       </div>
-
-      <!-- <div class="image-wrapper grid-left">
-
-      </div> -->
-
       <img src="./images/images/about.jpg" alt="" class="block-image grid-left">
       <div class="grid-right">
         <p class="text about__text">
@@ -86,12 +62,11 @@
           но при небольшом ветре мы устраиваем сплавы.</p>
         <p class="text about__text">Берите с собой четвероногих друзей, мы pet friendly ❤️</p>
       </div>
-
     </div>
   </div>
 
 
-  <div class="weather">
+  <div class="weather block__pd-top">
     <div class="weather__widget-mobile">
       <a class="weatherwidget-io" href="https://forecast7.com/en/41d7244d83/tbilisi/" data-label_1="TBILISI"
         data-label_2="WEATHER" data-font="Open Sans" data-icons="Climacons Animated" data-theme="original"
@@ -106,7 +81,7 @@
           data-raincolor="#ffffff">TBILISI WEATHER</a>
       </div>
       <div class="grid-title">
-        <h2 class="title-block weather__title">Погода для sup серфинга</h2>
+        <h2 class="title title__inner">Погода для sup серфинга</h2>
       </div>
       <div class="grid-left weather__grid-left none">
         <a class="weatherwidget-io" href="https://forecast7.com/en/41d7244d83/tbilisi/" data-label_1="TBILISI"
@@ -122,11 +97,10 @@
           настроение и настроение человека, что может отразиться на его способности и результативности. </p>
         <p class="text weather__text">Поэтому для наилучшего опыта запланируйте ваш отдых учитывая погоду.</p>
       </div>
-
     </div>
   </div>
 
-  <div class="rent">
+  <div class="rent block__pd-top-bottom">
     <div class="container">
       <h2 class="rent__title">Аренда сап борда<br>
         Что входит в аренду?</h2>
@@ -196,11 +170,11 @@
     </div>
   </div>
 
-  <div class="gift">
+  <div class="gift block__pd-top">
     <div class="container">
       <div class="container-grid">
         <div class="grid-left">
-          <h2 class="title-block gift__title">Подарочный сертификат</h2>
+          <h2 class="title title__outer">Подарочный сертификат</h2>
           <p class="text gift__text">Также вы можете приобрести подарочный сертификат. Стоимость равна почасовой аренды.
           </p>
 
@@ -237,9 +211,9 @@
     </div>
   </div>
 
-  <div class="services">
+  <div class="services block__pd-top">
     <div class="container">
-      <h2 class="title-block">Дополнительные услуги</h2>
+      <h2 class="title title__outer">Дополнительные услуги</h2>
 
       <div class="grid-item main">
         <div class="items services__items">
@@ -302,11 +276,11 @@
     </div>
   </div>
 
-  <div class="tours">
+  <div class="tours block__pd-top">
     <div class="container">
       <div class="container-grid">
         <div class="grid-title">
-          <h2 class="title-block title-block__padding-top">Однодневные Sup туры</h2>
+          <h2 class="title title__inner">Однодневные Sup туры</h2>
         </div>
         <img src="./images/images/about.jpg" alt="" class="block-image grid-left">
         <!-- <div class="grid-left image-wrapper">
@@ -358,10 +332,11 @@
 
     </div>
   </div>
-  <div class="instagram">
+
+  <div class="instagram block__pd-top">
     <div class="container">
       <div class="row instagram__header">
-        <h2 class="title-block">Подпишитесь на наш Instagram</h2>
+        <h2 class="title title__outer">Подпишитесь на наш Instagram</h2>
         <a href="" class="title link__underline ">@sup.ge</a>
       </div>
 
@@ -396,9 +371,9 @@
     </div>
   </div>
 
-  <div class="contacts">
+  <div class="contacts block__pd-top">
     <div class="container">
-      <h2 class="title-block">Где нас можно найти?</h2>
+      <h2 class="title title__outer">Где нас можно найти?</h2>
 
       <div class="contacts__row">
         <div class="contacts__map">
