--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
   <div class="gift block__pd-top">
     <div class="container">
-      <div class="container-grid">
+      <div class="container-grid gift__container-grid">
         <div class="grid-left">
           <h2 class="title title__outer">Подарочный сертификат</h2>
           <p class="text gift__text">Также вы можете приобрести подарочный сертификат. Стоимость равна почасовой аренды.
@@ -337,7 +337,7 @@
     <div class="container">
       <div class="row instagram__header">
         <h2 class="title title__outer">Подпишитесь на наш Instagram</h2>
-        <a href="" class="title link__underline ">@sup.ge</a>
+        <a href="" class="title link__underline  instagram__link">@sup.ge</a>
       </div>
 
       <div class="grid-item main">
@@ -403,15 +403,15 @@
   </div>
 
   <footer class="footer">
-    <div class="container footer__container">
+    <div class="container">
 
-      <div class="row">
-        <div class="column">
+      <div class="footer__row">
+        <div class="footer__column">
           <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
           <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
           <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
         </div>
-        <div class="column">
+        <div class="footer__column">
           <h6 class="footer__title">
             Свяжитесь с нами для сотрудничества
           </h6>
