fix slider scroll

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <div class="grid-title">
           <h2 class="title title__inner">Однодневные Sup туры</h2>
         </div>
-        <img src="./images/images/about.jpg" alt="" class="block-image grid-left">
+        <img src="./images/images/tours_left.jpg" alt="" class="block-image grid-left">
         <!-- <div class="grid-left image-wrapper">
           <img src="./images/images/about.jpg" alt="" class="about__image">
         </div> -->
@@ -325,12 +325,12 @@
   <div class="instagram block__pd-top">
     <div class="container">
       <div class="row instagram__header">
-        <h2 class="title title__outer">Подпишитесь на наш Instagram</h2>
+        <h2 class="title">Подпишитесь на наш Instagram</h2>
         <a href="" class="title link__underline  instagram__link">@sup.ge</a>
       </div>
 
       <div class="grid-item main">
-        <div class="items">
+        <div class="items instagram__items">
 
           <div class="item item4 instagram__slide">
             <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
