add mobile menu controls

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
 
-    <div class="header__controls none">
+    <div class="header__controls header__controls_hidden">
       <div class="header__nav navigation">
         <a href="#" class="navigation__link navigation__link--active">О нас</a>
         <a href="#" class="navigation__link">Аренда</a>
