add connect states on actions

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </header>
   <div class="connect">
     <button class="connect__btn">Забронируйте прогулку</button>
-    <div class="connect__links">
+    <div class="connect__links connect__links_hidden">
 
       <a href="#" class="connect__link connect__telegram">
         <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
