--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
   </header>
-  <div class="connect">
+  <div class="connect none">
     <button class="connect__btn">Забронируйте прогулку</button>
     <div class="connect__links connect__links_hidden">
 
