add hover effects

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- <link rel="stylesheet" href="./css/hover.css"> -->
+  <!-- <link rel="stylesheet" href="./css/test-2.css">
+  <link rel="stylesheet" href="./css/test.css"> -->
   <link rel="stylesheet" href="./css/main.css">
   <!-- <link rel="stylesheet" href="./css/burger.css"> -->
 
@@ -50,7 +53,7 @@
 
   </header>
   <div class="connect none">
-    <button class="connect__btn">Забронируйте прогулку</button>
+    <button class="connect__btn hvra-radial-out">Забронируйте прогулку</button>
     <div class="connect__links connect__links_hidden">
 
       <a href="#" class="connect__link connect__telegram">
@@ -248,7 +251,7 @@
               <input type="number" name="hours" id="hours" class="form__input form__hours" placeholder="Кол-во часов"
                 min="1" max="10">
             </fieldset>
-            <button type="submit" class="form__submit">Отправить заявку</button>
+            <button type="submit" class="form__submit hvr--radial-out">Отправить заявку</button>
           </form>
         </div>
         <div class="grid-right">
