add id to nav links

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     <div class="header__controls header__controls_hidden">
       <div class="header__nav navigation">
-        <a href="#" class="navigation__link navigation__link--active">О нас</a>
-        <a href="#" class="navigation__link">Аренда</a>
-        <a href="#" class="navigation__link">Туры</a>
-        <a href="#" class="navigation__link">Контакты</a>
+        <a href="#about" class="navigation__link navigation__link--active">О нас</a>
+        <a href="#rent" class="navigation__link">Аренда</a>
+        <a href="#tours" class="navigation__link">Туры</a>
+        <a href="#contacts" class="navigation__link">Контакты</a>
       </div>
       <div class="header__lang lang">
         <a href="#" class="lang__link">Eng</a>
@@ -117,7 +117,7 @@
     </div>
   </div>
 
-  <div class="about block__pd-top">
+  <div class="about block__pd-top" id="about">
     <div class="container container-grid">
       <div class="grid-title">
         <h2 class="title title__inner">О нас</h2>
@@ -163,7 +163,7 @@
     </div>
   </div>
 
-  <div class="rent block__pd-top-bottom">
+  <div class="rent block__pd-top-bottom" id="rent">
     <div class="container">
       <h2 class="rent__title">Аренда сап борда<br>
         Что входит в аренду?</h2>
@@ -339,7 +339,7 @@
     </div>
   </div>
 
-  <div class="tours block__pd-top">
+  <div class="tours block__pd-top" id="tours">
     <div class="container">
       <div class="container-grid">
         <div class="grid-title">
@@ -434,7 +434,7 @@
     </div>
   </div>
 
-  <div class="contacts block__pd-top">
+  <div class="contacts block__pd-top" id="contacts">
     <div class="container">
       <h2 class="title title__outer">Где нас можно найти?</h2>
 
