add scroll to top on logo click

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
   <meta name="robots" content="noindex">
 </head>
 
-<body class="body">
+<body class="body" id="top">
 
   <header class="header">
 
-    <img src="./images/logo/logo.svg" alt="sup.ge logo" class="logo header__logo ">
+    <a href="#top">
+      <img src="./images/logo/logo.svg" alt="sup.ge logo" class="logo header__logo ">
+    </a>
+
+
 
     <div class="header__burger">
       <div id="menuToggle" class="menuToggle">
