replace links to telegram

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <button class="connect__btn hvra-radial-out">Забронируйте прогулку</button>
     <div class="connect__links connect__links_hidden">
 
-      <a href="https://t.me/suptbilisi" class="connect__link connect__telegram" target="_blank">
+      <a href="https://t.me/supsurfge" class="connect__link connect__telegram" target="_blank">
         <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M27 14C27 21.1797 21.1797 27 14 27C6.8203 27 1 21.1797 1 14C1 6.8203 6.8203 1 14 1C21.1797 1 27 6.8203 27 14Z"
@@ -461,7 +461,7 @@
           </div>
           <div class="contacts__social social">
 
-            <a href="https://t.me/suptbilisi" class="connect__link connect__telegram" target="_blank">
+            <a href="https://t.me/supsurfge" class="connect__link connect__telegram" target="_blank">
               <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M27 14C27 21.1797 21.1797 27 14 27C6.8203 27 1 21.1797 1 14C1 6.8203 6.8203 1 14 1C21.1797 1 27 6.8203 27 14Z"
