replace email links

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           <p class="text gift__text">Также вы можете приобрести подарочный сертификат. Стоимость равна почасовой аренды.
           </p>
 
-          <form action="#" method="post" class="gift__form form">
+          <form action="/mail.php" method="post" class="gift__form form">
             <fieldset class="form__column form__fieldset">
               <input type="text" name="name" id="name" class="form__input" placeholder="Имя Фамилия">
               <input type="text" name="contact" id="contact" class="form__input" placeholder="Телефон или соц. сети">
@@ -456,8 +456,7 @@
             <p class="text">г. Тбилиси, Грузия
               Тбилисское море</p>
             <a href="tel:++995599167632" class="text contacts__link">+995 599 16 76 32</a>
-            <a href="mailto:SupTbilisiSea@gmail.com"
-              class="text contacts__link link__underline">SupTbilisiSea@gmail.com</a>
+            <a href="mailto:offers@tbilisi-sup.ge" class="text contacts__link link__underline">offers@tbilisi-sup.ge</a>
           </div>
           <div class="contacts__social social">
 
@@ -534,7 +533,7 @@
           <p class="text footer__text">Хотите провести корпоратив, организовать праздник или йогу
             на сапе? Мы открыты к разным видам сотрудничества. </p>
           <p class="text footer__text">Для детальной информации свяжитесь с нами.</p>
-          <a href="mailto:SupTbilisiSea@gmail.com" class="text footer__text link__underline">SupTbilisiSea@gmail.com</a>
+          <a href="mailto:offers@tbilisi-sup.ge" class="text footer__text link__underline">SupTbilisiSea@gmail.com</a>
         </div>
 
       </div>
