--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="grid-title">
         <h2 class="title title__inner">О нас</h2>
       </div>
-      <img src="./images/images/about.jpg" alt="" class="block-image grid-left">
+      <img src="./images/images/about.webp" alt="" class="block-image grid-left">
       <div class="grid-right">
         <p class="text about__text">
           SUP - гребля одним веслом на доске. Подходит для людей всех возрастов и уровней подготовки, очень прост в
@@ -350,9 +350,9 @@
         <div class="grid-title">
           <h2 class="title title__inner">Однодневные Sup туры</h2>
         </div>
-        <img src="./images/images/tours_left.jpg" alt="" class="block-image grid-left">
+        <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left">
         <!-- <div class="grid-left image-wrapper">
-          <img src="./images/images/about.jpg" alt="" class="about__image">
+          <img src="./images/images/about.webp" alt="" class="about__image">
         </div> -->
         <div class="grid-right weather__description">
           <p class="text">Мы устраиваем sup туры недалеко от Тбилиси на Жинвальское водохранилище, озеро Сиони, озеро
@@ -373,25 +373,25 @@
         <div class="items">
           <div class="item item1">
             <figure>
-              <img src="./images/images/zinval.jpg" alt="" class="lakes__img">
+              <img src="./images/images/zinval.webp" alt="" class="lakes__img">
               <figcaption class="text-bold lakes__text">Жинвальское водохранилище</figcaption>
             </figure>
           </div>
           <div class="item item2">
             <figure>
-              <img src="./images/images/sioni.jpg" alt="" class="lakes__img">
+              <img src="./images/images/sioni.webp" alt="" class="lakes__img">
               <figcaption class="text-bold lakes__text">озеро Сиони</figcaption>
             </figure>
           </div>
           <div class="item item3">
             <figure>
-              <img src="./images/images/paravani.jpg" alt="" class="lakes__img">
+              <img src="./images/images/paravani.webp" alt="" class="lakes__img">
               <figcaption class="text-bold lakes__text">озеро Паравани</figcaption>
             </figure>
           </div>
           <div class="item item4">
             <figure>
-              <img src="./images/images/bazaleti.jpg" alt="" class="lakes__img">
+              <img src="./images/images/bazaleti.webp" alt="" class="lakes__img">
               <figcaption class="text-bold lakes__text">озеро Базалети</figcaption>
             </figure>
           </div>
@@ -413,26 +413,30 @@
         <div class="items instagram__items">
 
           <div class="item item4 instagram__slide">
-            <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/1-inst.webp" alt="" class="instagram__img">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/2-inst.webp" alt="" class="instagram__img">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/3-inst.webp" alt="" class="instagram__img">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/4-inst.webp" alt="" class="instagram__img">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/5-inst.webp" alt="" class="instagram__img">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/6-inst.webp" alt="" class="instagram__img">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/zinval.jpg" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/7-inst.webp" alt="" class="instagram__img">
           </div>
+          <div class="item item4 instagram__slide">
+            <img src="./images/images/instagramm/8-inst.webp" alt="" class="instagram__img">
+          </div>
+
 
         </div>
       </div>
@@ -447,9 +451,14 @@
       <div class="contacts__row">
         <div class="contacts__map">
           <iframe
+            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2976.9780569297945!2d44.83618397653291!3d41.74256617388848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDHCsDQ0JzMzLjIiTiA0NMKwNTAnMTkuNSJF!5e0!3m2!1sen!2sge!4v1685601865451!5m2!1sen!2sge"
+            width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+          <!-- <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5956.409737657439!2d44.880932306065255!3d41.71609787529984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sge!4v1684010750423!5m2!1sen!2sge"
             width="100%" height="275" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade"></iframe> -->
         </div>
         <div class="contacts__info">
           <div class="contacts__text">
@@ -533,7 +542,7 @@
           <p class="text footer__text">Хотите провести корпоратив, организовать праздник или йогу
             на сапе? Мы открыты к разным видам сотрудничества. </p>
           <p class="text footer__text">Для детальной информации свяжитесь с нами.</p>
-          <a href="mailto:offers@tbilisi-sup.ge" class="text footer__text link__underline">SupTbilisiSea@gmail.com</a>
+          <a href="mailto:offers@tbilisi-sup.ge" class="text footer__text link__underline">offers@tbilisi-sup.ge</a>
         </div>
 
       </div>
