add inline style for hero image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <style>
+    .hero {
+      background: no-repeat url("../images/images/bg-image-hover.jpg");
+      background-size: cover;
+      height: 100vh;
+      min-height: 800px;
+    }
+  </style>
+
   <!-- <link rel="stylesheet" href="./css/hover.css"> -->
   <!-- <link rel="stylesheet" href="./css/test-2.css">
   <link rel="stylesheet" href="./css/test.css"> -->
@@ -350,7 +359,7 @@
         <div class="grid-title">
           <h2 class="title title__inner">Однодневные Sup туры</h2>
         </div>
-        <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left">
+        <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left" loading="lazy">
         <!-- <div class="grid-left image-wrapper">
           <img src="./images/images/about.webp" alt="" class="about__image">
         </div> -->
@@ -373,25 +382,25 @@
         <div class="items">
           <div class="item item1">
             <figure>
-              <img src="./images/images/zinval.webp" alt="" class="lakes__img">
+              <img src="./images/images/zinval.webp" alt="" class="lakes__img" loading="lazy">
               <figcaption class="text-bold lakes__text">Жинвальское водохранилище</figcaption>
             </figure>
           </div>
           <div class="item item2">
             <figure>
-              <img src="./images/images/sioni.webp" alt="" class="lakes__img">
+              <img src="./images/images/sioni.webp" alt="" class="lakes__img" loading="lazy">
               <figcaption class="text-bold lakes__text">озеро Сиони</figcaption>
             </figure>
           </div>
           <div class="item item3">
             <figure>
-              <img src="./images/images/paravani.webp" alt="" class="lakes__img">
+              <img src="./images/images/paravani.webp" alt="" class="lakes__img" loading="lazy">
               <figcaption class="text-bold lakes__text">озеро Паравани</figcaption>
             </figure>
           </div>
           <div class="item item4">
             <figure>
-              <img src="./images/images/bazaleti.webp" alt="" class="lakes__img">
+              <img src="./images/images/bazaleti.webp" alt="" class="lakes__img" loading="lazy">
               <figcaption class="text-bold lakes__text">озеро Базалети</figcaption>
             </figure>
           </div>
@@ -413,28 +422,28 @@
         <div class="items instagram__items">
 
           <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/1-inst.webp" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/1-inst.webp" alt="" class="instagram__img" loading="lazy">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/2-inst.webp" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/2-inst.webp" alt="" class="instagram__img" loading="lazy">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/3-inst.webp" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/3-inst.webp" alt="" class="instagram__img" loading="lazy">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/4-inst.webp" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/4-inst.webp" alt="" class="instagram__img" loading="lazy">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/5-inst.webp" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/5-inst.webp" alt="" class="instagram__img" loading="lazy">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/6-inst.webp" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/6-inst.webp" alt="" class="instagram__img" loading="lazy">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/7-inst.webp" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/7-inst.webp" alt="" class="instagram__img" loading="lazy">
           </div>
           <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/8-inst.webp" alt="" class="instagram__img">
+            <img src="./images/images/instagramm/8-inst.webp" alt="" class="instagram__img" loading="lazy">
           </div>
 
 
