small text fixes + refactoring

--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
     }
   </style>
 
-  <!-- <link rel="stylesheet" href="./css/hover.css"> -->
-  <!-- <link rel="stylesheet" href="./css/test-2.css">
-  <link rel="stylesheet" href="./css/test.css"> -->
   <link rel="stylesheet" href="./css/main.css">
-  <!-- <link rel="stylesheet" href="./css/burger.css"> -->
+
 
   <title>Sup surfing в Тбилиси</title>
   <meta name="robots" content="noindex">
@@ -37,10 +34,7 @@
 
     <div class="header__burger">
       <div id="menuToggle" class="menuToggle">
-        <!--
-        A fake / hidden checkbox is used as click reciever,
-        so you can use the :checked selector on it.
-        -->
+
         <input type="checkbox" class="menuToggle__input" />
         <span></span>
         <span></span>
@@ -171,7 +165,7 @@
         <p class="text weather__text">
           Для сап-серфинга, как и для любых других видов водного спорта, погода играет важную роль. Сильный ветер
           или штормовые условия могут сделать sup серфинг небезопасным и неудобным. Кроме того, погода может влиять на
-          настроение и настроение человека, что может отразиться на его способности и результативности. </p>
+          настроение человека, что может отразиться на его способности и результативности. </p>
         <p class="text weather__text">Поэтому для наилучшего опыта запланируйте ваш отдых учитывая погоду.</p>
       </div>
     </div>
@@ -191,8 +185,8 @@
           <div class="rent__item-left">
             <p class="rent__subtitle rent__subtitle--padding-32">Сап борды доступные для аренды:</p>
             <ul class="rent__list">
-              <li class="rent__list-item rent__text">8 Sup досок iBoard Pro 11'6 (1 человек)</li>
-              <li class="rent__list-item rent__text">1 Big iBoard (вместимость до 10 человек)</li>
+              <li class="rent__list-item rent__text">8 Sup досок iBoard</li>
+              <li class="rent__list-item rent__text">1 Party iBoard SUP для большой компании</li>
             </ul>
           </div>
           <div class="rent__item-left">
@@ -236,7 +230,7 @@
           </div>
           <div class="rent__item-right">
             <p class="rent__subtitle">Место для хранения вещей и переодевания.</p>
-            <p class="rent__text">У нас есть мобильная передевалка, а так же место где Вы можете оставить свои вещи и
+            <p class="rent__text">У нас есть переодевалка, а так же место где Вы можете оставить свои вещи и
               подготовиться
               к прогулке на sup бордах.
               Если Вы вдруг забыли солнцезащитный крем, мы
@@ -541,8 +535,6 @@
       <div class="footer__row">
         <div class="footer__column">
           <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
-          <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
-          <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
         </div>
         <div class="footer__column">
           <h6 class="footer__title">
@@ -562,6 +554,7 @@
   <script src="./js/main.js"></script>
   <script type="module" src="./js/scroll.js"></script>
   <script type="module" src="./js/menu.js"></script>
+  <script type="module" src="./js/connect.js"></script>
 
   <script>
     !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
