logo + favicon fix

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
   <link rel="stylesheet" href="./css/main.css">
 
+  <link rel="icon" href="./images/logo/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="./images/logo/favicon.svg">
+  <link rel="icon" type="image/png" href="./images/logo/favicon.png">
 
   <title>Sup surfing в Тбилиси</title>
   <meta name="robots" content="noindex">
@@ -27,7 +30,7 @@
   <header class="header">
 
     <a href="#top">
-      <img src="./images/logo/logo.svg" alt="sup.ge logo" class="logo header__logo ">
+      <img src="./images/logo/logo-2.svg" alt="sup.ge logo" class="logo header__logo">
     </a>
 
 
