add english version

--- a/geo.html
+++ b/geo.html
@@ -21,8 +21,9 @@
   <link rel="icon" type="image/svg+xml" href="./images/logo/favicon.svg">
   <link rel="icon" type="image/png" href="./images/logo/favicon.png">
 
-  <title>Sup surfing თბილისში</title>
-  <meta name="description" content="გასეირნება საპ დაფებზე, დაფების გაქირავება, ერთდღიანი ტურების ჩატარება">
+  <title>Sup surfing თბილისში | SUP დაფის დაქირავება</title>
+  <meta name="description"
+    content="გასეირნება საპ დაფებზე, დაფების გაქირავება, ერთდღიანი ტურების ჩატარება. 20 ლარიდან. გასეირნების დაჯავშნა!">
 
 </head>
 
@@ -56,9 +57,9 @@
         <a href="#contacts" class="navigation__link">კონტაქტები</a>
       </div>
       <div class="header__lang lang">
-        <a href="#" class="lang__link">Eng</a>
-        <a href="/" class="lang__link lang__link--active">Ru</a>
-        <a href="/geo.html" class="lang__link">Geo</a>
+        <a href="/supsurfing-en.html" class="lang__link">Eng</a>
+        <a href="/" class="lang__link">Ru</a>
+        <a href="/geo.html" class="lang__link lang__link--active">Geo</a>
       </div>
     </div>
 
