--- a/geo.html
+++ b/geo.html
@@ -17,9 +17,13 @@
 
   <link rel="stylesheet" href="./css/main.css">
 
-  <link rel="icon" href="./images/logo/favicon.ico">
-  <link rel="icon" type="image/svg+xml" href="./images/logo/favicon.svg">
-  <link rel="icon" type="image/png" href="./images/logo/favicon.png">
+  <link rel="shortcut icon" href="./images/logo/favicon.ico">
+  <link rel="apple-touch-icon" sizes="76x76" href="./images/favicon/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./images/favicon/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./images/favicon/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
 
   <title>Sup surfing თბილისში | SUP დაფის დაქირავება</title>
   <meta name="description"
