--- a/geo.html
+++ b/geo.html
@@ -412,9 +412,11 @@
       </div>
 
       <div class="grid-item main">
-        <div class="items instagram__items">
 
-          <div class="item item4 instagram__slide">
+        <div class="items instagram__items">
+          <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+          <div class="elfsight-app-974dffa7-a081-4b06-a908-6c8928d5c638"></div>
+          <!-- <div class="item item4 instagram__slide">
             <img src="./images/images/instagramm/1-inst.webp" alt="" class="instagram__img" loading="lazy">
           </div>
           <div class="item item4 instagram__slide">
@@ -437,7 +439,7 @@
           </div>
           <div class="item item4 instagram__slide">
             <img src="./images/images/instagramm/8-inst.webp" alt="" class="instagram__img" loading="lazy">
-          </div>
+          </div> -->
 
 
         </div>
