Replace maps and coordinates

--- a/supsurfing-en.html
+++ b/supsurfing-en.html
@@ -414,31 +414,6 @@
       <div class="grid-item main">
         <div class="items instagram__items">
 
-          <!-- <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/1-inst.webp" alt="" class="instagram__img" loading="lazy">
-          </div>
-          <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/2-inst.webp" alt="" class="instagram__img" loading="lazy">
-          </div>
-          <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/3-inst.webp" alt="" class="instagram__img" loading="lazy">
-          </div>
-          <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/4-inst.webp" alt="" class="instagram__img" loading="lazy">
-          </div>
-          <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/5-inst.webp" alt="" class="instagram__img" loading="lazy">
-          </div>
-          <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/6-inst.webp" alt="" class="instagram__img" loading="lazy">
-          </div>
-          <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/7-inst.webp" alt="" class="instagram__img" loading="lazy">
-          </div>
-          <div class="item item4 instagram__slide">
-            <img src="./images/images/instagramm/8-inst.webp" alt="" class="instagram__img" loading="lazy">
-          </div> -->
-
           <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
           <div class="elfsight-app-974dffa7-a081-4b06-a908-6c8928d5c638"></div>
         </div>
@@ -454,7 +429,7 @@
       <div class="contacts__row">
         <div class="contacts__map">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d2976.9780569297945!2d44.83618397653291!3d41.74256617388848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDHCsDQ0JzMzLjIiTiA0NMKwNTAnMTkuNSJF!5e0!3m2!1sen!2sge!4v1685601865451!5m2!1sen!2sge"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2976.9782272594857!2d44.839421900000005!3d41.7425625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440cd7e64f626b%3A0x7cf863a60e8b11ab!2sPRVQ%2B2QF%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1686159979923!5m2!1sen!2sge"
             width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -462,6 +437,7 @@
           <div class="contacts__text">
             <p class="text">Tbilisi, Georgia
               Tbilisi Sea</p>
+            <p class="text">Coordinates: PRVQ+2QF</p>
             <a href="tel:++995599167632" class="text contacts__link">+995 599 16 76 32</a>
             <a href="mailto:offers@tbilisi-sup.ge" class="text contacts__link link__underline">offers@tbilisi-sup.ge</a>
           </div>
