--- a/geo.html
+++ b/geo.html
@@ -362,7 +362,7 @@
           <p class="text">ჩვემ ვატარებთ საპ ტურებს თბილისთან ახლოს ჟინვალის წყალსაცავთან, სიონის მდინარესთან, ფარავანის
             მდინარესთან, წალკისის წყალსაცავთან, ბაზალეთის ტბასთან. ტრანსფერს თბილისიდან და უკან საკუთარ თავზე ვიღებთ.
           </p>
-          <p class="text">თქვენ გელოდებათ ორ საათიანი კატაობა საპებზე საქართველოს ყველაზე ცნობილ და არაჩვეულებრივ
+          <p class="text">თქვენ გელოდებათ კატაობა საპებზე საქართველოს ყველაზე ცნობილ და არაჩვეულებრივ
             წყალსაცავებთან. ვატარებთ ინსტრუქტაჟს.</p>
           <p class="text">ყველა საპ ტური წინასწარ უნდა დაიჯავშნოს. ფასის დასაზუსტად დაგვიკავშირდით ჩვენ, რადგან ის არის
             დამოკიდებული ადამიანთა რაოდენობაზე და არჩეულ წყალსაცავზე.</p>
