--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                   1,5-2 часа в зависимости от скорости ветра.</p>
                 <p class="text">Сопровождение по желанию и зависит от уровня катания райдера.</p>
               </div>
-              <span class="text-bold services__footer">50 ₾</span>
+              <span class="text-bold services__footer">50 ₾ с доски (2 часа)</span>
             </div>
           </div>
 
@@ -363,14 +363,12 @@
           <h2 class="title title__inner">Однодневные Sup туры</h2>
         </div>
         <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left" loading="lazy">
-        <!-- <div class="grid-left image-wrapper">
-          <img src="./images/images/about.webp" alt="" class="about__image">
-        </div> -->
+
         <div class="grid-right weather__description">
           <p class="text">Мы устраиваем sup туры недалеко от Тбилиси на Жинвальское водохранилище, озеро Сиони, озеро
-            Паравани, Цалкинское водохранилище, озеро Базалети. Трансфер от Тбилиси
-            и обратно мы берём на себя.</p>
-          <p class="text">Вас ждёт двухчасовое катание на сапах в самых известных
+            Паравани, Цалкинское водохранилище, озеро Базалети. Можем организовать трансфер либо просто доставить
+            оборудование на необходимую локацию.</p>
+          <p class="text">Вас ждёт катание на сапах в самых известных
             и живописных водоемах Грузии. Проводим инструктаж, выдаём спасательные жилеты и водонепроницаемые чехлы
             для телефонов.</p>
           <p class="text">Все sup туры бронируются заранее. Для уточнения цены свяжитесь с нами, так как она зависит
