--- a/supsurfing-en.html
+++ b/supsurfing-en.html
@@ -325,7 +325,7 @@
                   depending on wind speed.</p>
                 <p class="text">Accompaniment is optional and depends on the rider's skill level.</p>
               </div>
-              <span class="text-bold services__footer">50 ₾</span>
+              <span class="text-bold services__footer">50 ₾ for board (2hours)</span>
             </div>
           </div>
 
@@ -358,10 +358,10 @@
         </div>
         <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left" loading="lazy">
         <div class="grid-right weather__description">
-          <p class="text">We arrange sup tours near Tbilisi to Zhinvali reservoir, Sioni lake,
+          <p class="text">We arrange transfer or deliver supboards from Tbilisi to Zhinvali reservoir, Sioni lake,
             Paravani lake, Tsalkinskoye reservoir, Bazaleti lake. We take care of the transfer from Tbilisi and back.
           </p>
-          <p class="text">You will have a two-hour ride on the Sup in the most famous and picturesque reservoirs of
+          <p class="text">You will have a ride on the Sup in the most famous and picturesque reservoirs of
             Georgia.
             We carry out briefing, issue life jackets and waterproof cases for phones.</p>
           <p class="text">All sup tours are booked in advance. To clarify the price, please contact us,
